fix: z-index on topic-list-header

--- a/scss/topics_list.scss
+++ b/scss/topics_list.scss
@@ -4,10 +4,9 @@
 }
 
 .topic-list-header {
-    position: sticky;
     top: calc(var(--panel-offset));
     background-color: $body-bg;
-    z-index: $zindex-sticky;
+    z-index: $zindex-dropdown; // allows for top nav dropdowns to appear on top
     border-top: 1px solid $post-border-color;
     border-bottom: 1px solid $post-border-color;
 }
